--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "seed": "tsx prisma/seed.ts",
-    "sync-pixel": "tsx scripts/sync-pixel-posts.ts"
+    "sync-pixel": "tsx scripts/sync-pixel-posts.ts",
+    "dev:mcp": "tsx mcp/server.ts",
+    "start:mcp": "node -r tsx/register mcp/server.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
@@ -23,6 +25,8 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@slack/bolt": "^4.6.0",
+    "@slack/web-api": "^7.12.0",
     "@tanstack/react-query": "^5.25.0",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
