--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.344.0",
-    "next": "14.1.3",
+    "next": "^14.2.25",
     "next-auth": "^5.0.0-beta.4",
     "pg": "^8.16.3",
     "react": "^18.2.0",
